force-app/main/default/objects/Application_Catalog__c/Application_Catalog__c.object-meta.xml
<CustomObject>
    <label>Application Catalog</label>
    <nameField>
        <label>Application Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>