force-app/main/default/objects/Application_Catalog__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Application Catalogs</relationshipLabel>
    <relationshipName>Application_Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>