force-app/main/default/objects/Application_Catalog__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Application Catalogs</relationshipLabel>
    <relationshipName>Application_Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>