force-app/main/default/objects/Application_Catalog__c/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Catalog</label>
    <referenceTo>Product_Catalog__c</referenceTo>
    <relationshipLabel>Application Catalogs</relationshipLabel>
    <relationshipName>Application_Catalogs</relationshipName>
    <type>Lookup</type>
</CustomField>