force-app/main/default/objects/Application_Catalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Plans_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>